--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<h2 style=" color: #ff6666;">Education</h2>
 								<h3 style="font-weight: bold; font-size: 30px; color:  #ffcce0">M.Tech. in Computational and Data Sciences 2019 - Present</h3>
 								<h4 style="font-size: 10;">Dept. of CDS, Indian Institute of Science, Bangalore</h4>
-								Courses taken: Topics in Database Systems, DBMS, Parallel Programming, Introduction to Scalable Systems, Desing and Analysis of Algorithms, Numerical Optimization 
+								Courses taken: Topics in Database Systems, DBMS, Parallel Programming, Introduction to Scalable Systems, Design and Analysis of Algorithms, Numerical Optimization 
 								<br/>
 								<p></p>	
 								<h3 style="font-weight: bold; font-size: 30px; color:  #ffcce0">B.Tech. in Information and Communication Technology 2013 - 2017</h3>
